[package]
name = "binyl"
description = "A bitwise UTF-8 string inspection tool"
version = "0.1.0"
authors = ["Yasuaki Uechi <y@uechi.io>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/uetchy/binyl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
